--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@ footer p { font-size: 13px; color: var(--text-muted); }
         <div class="feat-head">
           <div class="feat-icon">🖼️</div>
           <h3>IMG to IMG</h3>
-          <a class="watch-btn" onclick="openYT('DjT8QRseAm4'); return false;" href="#">▶ Watch</a>
+          <a class="watch-btn" onclick="openYT('jZaf7fgtOOE'); return false;" href="#">▶ Watch</a>
         </div>
         <p>Generate images with real-time viewport capture. Works in FreeView & CameraView.</p>
         <ul>
@@ -805,7 +805,7 @@ footer p { font-size: 13px; color: var(--text-muted); }
         <div class="feat-head">
           <div class="feat-icon">🎬</div>
           <h3>IMG to VID</h3>
-          <a class="watch-btn" onclick="openYT('M0ORqUfnTdo'); return false;" href="#">▶ Watch</a>
+          <a class="watch-btn" onclick="openYT('Cu6iuKFkfww'); return false;" href="#">▶ Watch</a>
         </div>
         <p>Create videos from three keyframe images. Auto-add to Video Sequencer.</p>
         <ul>
@@ -821,7 +821,7 @@ footer p { font-size: 13px; color: var(--text-muted); }
         <div class="feat-head">
           <div class="feat-icon">🧊</div>
           <h3>IMG to 3D</h3>
-          <a class="watch-btn" onclick="openYT('qTnr2gWNEo8'); return false;" href="#">▶ Watch</a>
+          <a class="watch-btn" onclick="openYT('7u7b076tY58'); return false;" href="#">▶ Watch</a>
         </div>
         <p>Convert images into GLB models via Trellis2. Imported with textures.</p>
         <ul>
@@ -832,8 +832,8 @@ footer p { font-size: 13px; color: var(--text-muted); }
       <div class="feat green">
         <div class="feat-head">
           <div class="feat-icon">💬</div>
-          <h3>AI Chat</h3>
-          <a class="watch-btn" onclick="openYT('jR-NOhpZ6aM'); return false;" href="#">▶ Watch</a>
+          <h3>Agentic Chat</h3>
+          <a class="watch-btn" onclick="openYT('Pty1DRT3H5g'); return false;" href="#">▶ Watch</a>
         </div>
         <p>Integrated chat via OpenRouter or local LM Studio.</p>
         <ul>
@@ -859,7 +859,7 @@ footer p { font-size: 13px; color: var(--text-muted); }
         <div class="feat-head">
           <div class="feat-icon">🎨</div>
           <h3>Remix</h3>
-          <a class="watch-btn" onclick="openYT('eoYKnJ3uiXA'); return false;" href="#">▶ Watch</a>
+          <a class="watch-btn" onclick="openYT('a93WBUlQy1k'); return false;" href="#">▶ Watch</a>
         </div>
         <p>Transform any displayed image from inside the Image Editor. Uses the current image as IMG to IMG input.</p>
         <ul>
@@ -873,7 +873,7 @@ footer p { font-size: 13px; color: var(--text-muted); }
         <div class="feat-head">
           <div class="feat-icon">🧩</div>
           <h3>LoRA Support</h3>
-          <a class="watch-btn" onclick="openYT('3SKgXOsP-20'); return false;" href="#">▶ Watch</a>
+          <a class="watch-btn" onclick="openYT('ZrsmP772tqk'); return false;" href="#">▶ Watch</a>
         </div>
         <p>Add LoRA models to your generation workflows.</p>
         <ul>
@@ -1043,7 +1043,7 @@ footer p { font-size: 13px; color: var(--text-muted); }
     <div class="tab-panel" id="tab-chat">
       <div style="display:flex;align-items:center;gap:12px;margin-bottom:4px">
         <h3>AI Chat</h3>
-        <a class="watch-btn" onclick="openYT('jR-NOhpZ6aM'); return false;" href="#">▶ Watch</a>
+        <a class="watch-btn" onclick="openYT('Pty1DRT3H5g'); return false;" href="#">▶ Watch</a>
       </div>
       <p class="sub">Integrated AI assistant inside Blender.</p>
       <ol>
@@ -1056,7 +1056,7 @@ footer p { font-size: 13px; color: var(--text-muted); }
     <div class="tab-panel" id="tab-i2i">
       <div style="display:flex;align-items:center;gap:12px;margin-bottom:4px">
         <h3>IMG to IMG</h3>
-        <a class="watch-btn" onclick="openYT('DjT8QRseAm4'); return false;" href="#">▶ Watch</a>
+        <a class="watch-btn" onclick="openYT('jZaf7fgtOOE'); return false;" href="#">▶ Watch</a>
       </div>
       <p class="sub">Generate images from your viewport.</p>
       <h4>🎯 Manual Mode</h4>
@@ -1082,7 +1082,7 @@ footer p { font-size: 13px; color: var(--text-muted); }
     <div class="tab-panel" id="tab-i2v">
       <div style="display:flex;align-items:center;gap:12px;margin-bottom:4px">
         <h3>IMG to VID</h3>
-        <a class="watch-btn" onclick="openYT('M0ORqUfnTdo'); return false;" href="#">▶ Watch</a>
+        <a class="watch-btn" onclick="openYT('Cu6iuKFkfww'); return false;" href="#">▶ Watch</a>
       </div>
       <p class="sub">Generate videos from three keyframe images.</p>
       <ol>
@@ -1098,7 +1098,7 @@ footer p { font-size: 13px; color: var(--text-muted); }
     <div class="tab-panel" id="tab-i23">
       <div style="display:flex;align-items:center;gap:12px;margin-bottom:4px">
         <h3>IMG to 3D</h3>
-        <a class="watch-btn" onclick="openYT('qTnr2gWNEo8'); return false;" href="#">▶ Watch</a>
+        <a class="watch-btn" onclick="openYT('7u7b076tY58'); return false;" href="#">▶ Watch</a>
       </div>
       <p class="sub">Convert 2D images to 3D GLB models via Trellis2.</p>
       <ol>
@@ -1112,7 +1112,7 @@ footer p { font-size: 13px; color: var(--text-muted); }
     <div class="tab-panel" id="tab-remix">
       <div style="display:flex;align-items:center;gap:12px;margin-bottom:4px">
         <h3>Remix</h3>
-        <a class="watch-btn" onclick="openYT('eoYKnJ3uiXA'); return false;" href="#">▶ Watch</a>
+        <a class="watch-btn" onclick="openYT('a93WBUlQy1k'); return false;" href="#">▶ Watch</a>
       </div>
       <p class="sub">Transform images from inside the Image Editor side panel.</p>
       <ol>
@@ -1135,7 +1135,7 @@ footer p { font-size: 13px; color: var(--text-muted); }
     <div class="tab-panel" id="tab-lora">
       <div style="display:flex;align-items:center;gap:12px;margin-bottom:4px">
         <h3>LoRA Support</h3>
-        <a class="watch-btn" onclick="openYT('3SKgXOsP-20'); return false;" href="#">▶ Watch</a>
+        <a class="watch-btn" onclick="openYT('ZrsmP772tqk'); return false;" href="#">▶ Watch</a>
       </div>
       <p class="sub">Add LoRA models to your generation workflows.</p>
       <ol>
