--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@ footer p { font-size: 13px; color: var(--text-muted); }
     <h1>Open<span>Blender</span></h1>
     <p class="hero-desc">An addon that brings generative workflows directly into Blender. Generate images, videos, 3D models, and receive AI assistance without leaving Blender.</p>
     <div class="hero-badges">
-      <span class="badge version">v0.28.0</span>
+      <span class="badge version">v0.28.2</span>
       <span class="badge blender">Blender 5.0+</span>
       <span class="badge">NVIDIA 24Gb VRAM</span>
 	  <span class="badge">85Gb SSD</span>
@@ -1281,6 +1281,14 @@ footer p { font-size: 13px; color: var(--text-muted); }
   <section class="section-anchor reveal" id="version">
     <h2 class="section-title">Version History</h2>
     <div class="version-bar" style="margin-top:16px">
+      <span class="ver-tag">v0.28.2</span>
+      <span class="ver-title">Patch</span>
+      <div class="ver-features">
+        <span class="ver-feat">Randomise Seed — IMG to IMG</span>
+        <span class="ver-feat">HDRI workflow model name correction</span>
+      </div>
+    </div>
+    <div class="version-bar" style="margin-top:8px">
       <span class="ver-tag">v0.28.0</span>
       <span class="ver-title">Feature Update</span>
       <div class="ver-features">
