--- a/index.html
+++ b/index.html
@@ -1688,6 +1688,7 @@ footer p { font-size: 13px; color: var(--text-muted); }
       <div class="tip warn">
         <h3>🔧 Other Issues</h3>
         <ul>
+          <li><code>If Trellis2 doesn't load on ComfyUI</code>, your system is probably blocking the symlink that is created for the environment, <code>RUN the ComfyUI server as Administrator</code> to allow the symlink to be created.</li>
           <li><strong>Missing models:</strong> Run <code>Verify_UpdateModels.bat</code></li>
           <li><strong>Missing nodes:</strong> ComfyUI Manager → Install Missing → Restart</li>
           <li><strong>Images not showing:</strong> Ensure Image Editor is visible</li>
